Upgrades for JDK 10 and libraries, declare modules for yqlplus jars.
Upgrade Guava from 23.1 to 25.1.
Upgrade Guice from 4.0 to 4.2.0 and remove now obsolete multibinding extension (part of Guice now).
Upgrade Jackson from 2.2.3 to 2.9.6.
Upgrade ASM from 6.0 to 6.2.
Resolve deprecated warnings from Antlr class ANTLRInputStream (new CharStream interface) -- implements new recommended way to handle case insensitive streams.
Resolve deprecated warnings from new {boxed primitive class}.
Add missing dependency from yqlplus_stdlib on guice (it directly depended but was benefiting from a transitive dependency).